--- a/WEB_253502_Melikava.API/appsettings.json
+++ b/WEB_253502_Melikava.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = Library.db"
+    "DefaultConnection": "Data Source = Books.db"
   },
   "AppSettings": {
     "ApiBaseUrl": "https://localhost:7002"
