Added authentication with Keycloak

--- a/WEB_253502_Melikava.API/appsettings.json
+++ b/WEB_253502_Melikava.API/appsettings.json
@@ -11,5 +11,9 @@
   },
   "AppSettings": {
     "ApiBaseUrl": "https://localhost:7002"
+  },
+  "AuthServer": {
+    "Host": "http://localhost:8080",
+    "Realm": "Melikava"
   }
 }
