--- a/WEB_253502_Melikava.UI/appsettings.json
+++ b/WEB_253502_Melikava.UI/appsettings.json
@@ -9,6 +9,12 @@
   "ItemsPerPage": 3,
   "UriData": {
     "ApiUri": "https://localhost:7002/api/"
+  },
+  "Keycloak": {
+    "Host": "http://localhost:8080",
+    "Realm": "Melikava",
+    "ClientId": "MelikavaUiClient",
+    "ClientSecret": "bEtx8bf1Tmz151XoPATg6QN7m8RCOFBQ"
   }
 
-}
+ }
