Testing and logging added

--- a/WEB_253502_Melikava.UI/appsettings.json
+++ b/WEB_253502_Melikava.UI/appsettings.json
@@ -15,6 +15,29 @@
     "Realm": "Melikava",
     "ClientId": "MelikavaUiClient",
     "ClientSecret": "bEtx8bf1Tmz151XoPATg6QN7m8RCOFBQ"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 
- }
+
+}
